--- a/backend/package.json
+++ b/backend/package.json
@@ -2,17 +2,20 @@
   "name": "server",
   "version": "0.0.1",
   "scripts": {
-    "start": "nodemon ./server.js"
+    "start": "node ./server.js",
+    "docs": "node ./node_modules/jsdoc/jsdoc.js . -d docs"
   },
   "dependencies": {
     "body-parser": "^1.17.2",
+    "compression": "^1.7.0",
     "cors": "^2.8.4",
     "dateformat": "^2.0.0",
     "express": "^4.15.4",
     "node-cache": "^4.1.1",
-    "nodemon": "^1.11.0",
     "request": "^2.81.0",
     "request-promise": "^4.2.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "nodemon": "^1.11.0"
+  }
 }
