--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,9 @@
   "name": "front",
   "version": "0.0.1",
   "scripts": {
-    "build": "webpack --config webpack.build.js --bail -p",
+    "build": "gulp build",
+    "start": "node server/app.js",
+    "build2": "webpack --config webpack.build.js --bail -p",
     "dev": "webpack-dev-server --history-api-fallback --hot --inline --progress",
     "test": "karma start",
     "test:live": "karma start --auto-watch --no-single-run"
@@ -11,10 +13,12 @@
     "@uirouter/angularjs": "^1.0.6",
     "angular": "^1.6.6",
     "bootstrap": "^3.3.7",
+    "compression": "^1.7.0",
     "jquery": "^3.2.1",
     "ngmap": "^1.18.4"
   },
   "devDependencies": {
+    "angular-jsdoc": "^1.5.0",
     "autoprefixer": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "gulp": "^3.9.0",
@@ -34,12 +38,15 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-server-livereload": "^1.9.2",
+    "gulp-shell": "^0.6.3",
     "gulp-sourcemaps": "^1.7.3",
     "gulp-strip-comments": "^2.4.5",
     "gulp-template": "^4.0.0",
     "gulp-uglify": "^2.0.0",
     "gulp-watch": "^4.3.5",
+    "jsdoc": "^3.5.4",
     "jshint": "^2.9.5",
+    "nodemon": "^1.11.0",
     "to-case": "^2.0.0",
     "yargs": "^6.6.0"
   }
